Update M3U_URL to use local m3u file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <script>
   // ၁။ m3u ဖိုင် link ကို ဒီမှာ ထည့်ပါ
-  const M3U_URL = 'https://pastebin.com/raw/nZy1wCzW'; 
+  const M3U_URL = 'm.m3u'; 
 
   var player = new Clappr.Player({
     source: "https://pull.niur.live/live/stream-351530_lhd.m3u8?txSecret=5e3422d3df2ee4b55bb0e671a1bffebb&txTime=6987aa86",
